# xpde-calc

./: meson.build  xpde-calc.desktop
DEBIAN/: control
src/: callbacks.c  config.h  config_file.h  display.c  flex_parser.c  galculator.h  general_functions.c  main.c  meson.build  ui.c  ui.h
ui/: basic_buttons_gtk3.ui  dispctrl_bottom_gtk3.ui  meson.build
