install_data(
	'about.ui',
	'hole.jpg',
	'basic_buttons_gtk3.ui',
	'main_frame_hildon.ui',
	'main_frame.ui',
	'classic_view.ui',
	'dispctrl_bottom_gtk3.ui',
	'paper_view.ui',
	'prefs_gtk3.ui',
	'dispctrl_right_gtk3.ui',
	'prefs-ume.ui',
	'dispctrl_right_vertical_gtk3.ui',
	'scientific_buttons_gtk3.ui',
install_dir: join_paths(get_option('datadir'), 'xpde', 'xpde-calc')
)
